# siphon-smpp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  mkdocs.yml
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yaml  pages.yaml  release.yaml
benches/: codec.rs
deploy/: Dockerfile  README.md  docker-compose.yml  smpp.example.yaml
deploy/k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
docs/: README.md  concepts.md  configuration.md  deployment.md  integration.md  kubernetes.md  operations.md  performance.md  quickstart.md  script-api.md  support.md
docs/cookbook/: index.md  smsc-gateway.md
examples/: echo.py  gateway.py  leak_check.rs
harness/: Cargo.toml  README.md  bench.sh  bench_echo.py  bench_echo_io.py  bench_multi.sh  run.sh  siphon.bench.io.yaml  siphon.bench.yaml  smpp.yaml
harness/src/: main.rs
python/: smpp.py
scripts/: check_sdk_parity.py  mem_leak_test.sh
src/: config.rs  install.rs  lib.rs  metrics.rs  pyclasses.rs  runtime.rs  sends.rs  submit.rs
