[package]
name = "siphon-smpp"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "SMPP 3.4 addon for siphon — exposes a scriptable `smpp` namespace to Python"
authors = ["SIPhon Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/siphon-project/siphon-smpp"
homepage = "https://github.com/siphon-project/siphon"
keywords = ["smpp", "sms", "siphon", "smsc", "telecom"]
categories = ["network-programming"]
# Operator-facing assets (deployment templates, Python examples) aren't
# part of the published crate.
exclude = ["deploy/", "examples/*.py"]

# siphon extension: a composing siphon binary registers the `namespace`
# and `task` hooks at startup. Scripts then handle SMPP PDUs (submit_sm,
# deliver_sm, …) through the `siphon.smpp` namespace.

[features]
default = []

[dependencies]
# SMPP 3.4 wire codec + async client/server: smpp34, provided by
# Real Time Telecom B.V. — https://github.com/Real-Time-Telecom-B-V/smpp34
smpp34 = "1.1"
# Canonical repo URL after the siphon → siphon-sip rename. The URL string must
# match byte-for-byte across every crate that depends on siphon-sip in one build
# graph (e.g. siphon-bin), or cargo resolves two separate copies. branch=main
# tracks the latest lib; the consumer's Cargo.lock still pins a concrete SHA.
siphon-sip = { git = "https://github.com/siphon-project/siphon-sip", branch = "main" }
# pyo3 must track siphon-sip's pin (currently 0.29): both link the `python`
# native library, and Cargo refuses two versions of a `links` crate in one graph.
pyo3 = { version = "0.29", features = ["auto-initialize"] }
pyo3-async-runtimes = { version = "0.29", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "codec"
harness = false

[package.metadata.docs.rs]
all-features = true
